Rework alignment